2011-10-11  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] DRT: Return the right window count in LayoutTestController.
        https://bugs.webkit.org/show_bug.cgi?id=69764

        Reviewed by Antonio Gomes.

        Follow-up to r96943: now that we have DumpRenderTreeChrome and
        DumpRenderTreeView in the tree, we can correctly count the number of
        open windows in DRT.

        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
        (LayoutTestController::windowCount):

2011-10-11  Jer Noble  <jer.noble@apple.com>

        REGRESSION (r96770-r96777): fast/dom/Window/window-properties.html, fast/dom/prototype-inheritance-2.html, fast/js/global-constructors.html failing on SnowLeopard Intel Release (Tests)
        https://bugs.webkit.org/show_bug.cgi?id=69800

        Reviewed by Csaba Osztrogonác.

        Enable WEB_AUDIO at runtime.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):

2011-10-11  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] DRT: Make sure IconDatabase is closed before trying to open it again.
        https://bugs.webkit.org/show_bug.cgi?id=69769

        Reviewed by Antonio Gomes.

        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
        (LayoutTestController::setIconDatabaseEnabled):

2011-10-11  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Remove all references to QTDIR_build and standalone_package

        Qt is now modularized, which means we no longer import WebKit into
        the Qt source tree. Instead we use git submodules, and building
        QtWebKit as "part of Qt" is really building QtWebKit as from trunk.

        To decrease the number of buildsystem configurations we also remove
        the standalone_package code-path used when we were providing tarballs
        with the derived sources pre-generated.

        Reviewed by Simon Hausmann.

        * MiniBrowser/qt/MiniBrowser.pro:
        * QtTestBrowser/QtTestBrowser.pro: