@@ -1,3 +1,12 @@
+2011-10-11  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>
+
+        [Qt] [WK2] NRWT failed to launch MiniBrowser after test run
+        https://bugs.webkit.org/show_bug.cgi?id=68016
+
+        Reviewed by Chang Shu.
+
+        * Scripts/webkitpy/layout_tests/port/qt.py:
+
 2011-10-11  Raphael Kubo da Costa  <kubo@profusion.mobi>
 
         [EFL] DRT: Return the right window count in LayoutTestController.
